--- a/MVC-Burger-Project/MVC-Burger-Project.csproj
+++ b/MVC-Burger-Project/MVC-Burger-Project.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.21" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.21" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.21" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.21">
       <PrivateAssets>all</PrivateAssets>
@@ -23,9 +24,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\Manager\Data\" />
-    <Folder Include="Areas\Manager\Models\" />
-    <Folder Include="Areas\Manager\Views\" />
+    <Folder Include="Areas\CustomerPanel\Data\" />
+    <Folder Include="Areas\CustomerPanel\Models\" />
+    <Folder Include="Areas\ManagerPanel\Data\" />
+    <Folder Include="Areas\ManagerPanel\Models\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Areas\ManagerPanel\Views\Panel\ManagerIndex.cshtml" />
   </ItemGroup>
 
 </Project>
